# Embedded_System_Hands_On_I

./: .gitignore  .gitmodules  readme.md
Project/Software/: AlarmClock.cpp  AlarmClock.h  Application.cpp  Application.h  BaseApp.cpp  BaseApp.h  CMakeLists.txt  DisplayItem.cpp  DisplayItem.h  EggTimer.cpp  EggTimerBase.cpp  EmulatedSystem.cpp  EmulatedSystem.h  Example.h  HardwareEmulator.cpp  HardwareEmulator.h  SmartEgg.cpp  SmartEgg.h  Snake.cpp  Snake.h  SpaceInvaders.cpp  SpaceInvaders.h  Stopwatch.cpp  System.cpp  System.h  logo.xpm  main.cpp
Project/Software/CubeMX/: .cproject  .mxproject  .project  CMakeLists.txt  SmartEggTimer.ioc  readme.md  stm32f1raspberry.cfg
Project/Software/FLTK/: AlarmClock.cpp  AlarmClock.h  Application.cpp  Application.h  BaseApp.cpp  BaseApp.h  DateTime.cpp  EggTimer.cpp  EggTimer.h  EggTimerBase.cpp  EggTimerBase.h  EmulatedSystem.cpp  EmulatedSystem.h  HardwareEmulator.cpp  HardwareEmulator.h  MP3Player.cpp  SetClock.cpp  SetClock.h  SmartEgg.cpp  SmartEgg.h  SpaceInvaders.cpp  SpaceInvaders.h  Stopwatch.cpp  Stopwatch.h  System.cpp  System.h  TestImage.cpp  TestImage.h
Task_1/: readme.md  (+5 more)
Task_3/1_Serial_Wire_Debugging/: CMakeLists.txt  SWD.cpp  SWD.h  main.cpp
Task_3/1_Serial_Wire_Debugging/Experimental_WIP_Code/: simple-ugly-swd.py
Task_4/2_Universal_Asynchronous_Receiver_Transmitter/: CMakeLists.txt  UART.cpp  UART.h  UART_Benchmark.ioc  main.cpp  raspi-run.sh
Task_4/2_Universal_Asynchronous_Receiver_Transmitter/Code-STM32/: Makefile
Task_4/2_Universal_Asynchronous_Receiver_Transmitter/Code-STM32/include/: main.h  stm32f0xx_it.h
Task_4/2_Universal_Asynchronous_Receiver_Transmitter/Code-STM32/src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  uart-handler.c
Task_4/2_Universal_Asynchronous_Receiver_Transmitter/Code-raspi/: main.py
Task_4/2_Universal_Asynchronous_Receiver_Transmitter/Code-raspi/python/: main.py
Task_4/2_Universal_Asynchronous_Receiver_Transmitter/Core/Inc/: stm32f0xx_it.h  uart_benchmark.h
(+293 files in other folders)
